updated README.md and changed scss structure

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,11 +4,14 @@
 //Base
 @import 'base/index';
 
-//Elements
-@import 'elements/index';
+//Layout
+@import 'layout/index';
 
 //Components
 @import 'components/index';
 
-//Views
-@import 'views/index';
+//Pages
+@import 'pages/index';
+
+//Vendors
+@import 'vendor/index';
